--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ Thanks, guys
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Flat No:107,Tulsi Co-Op-Hsg..Soc.Ltd.Sneha Nagar,Behind Vijaya Bank Agashi Road Pin:401303</p>
               </div>
 
               <div class="email">
@@ -535,7 +535,7 @@ Thanks, guys
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+919545012048 / 9326131073</p>
               </div>
 
             </div>
